# gameoflife

./: Cargo.toml
src/: canvas.rs  curisive_canvas.rs  game.rs  gui.rs  main.rs  sdl_canvas.rs  terminal.rs
